--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Hydro Sync IoT</title>
+    <title>Pedidos Restaurante</title>
     <meta name="description" content="Hydro Sync IoT">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=2ef8dee5f11530c7b88bfc37301e4638">
     <link rel="stylesheet" href="assets/css/Inter.css?h=1653f77a874b8c719b7930c16f024615">
     <link rel="stylesheet" href="assets/css/Libre%20Franklin.css?h=b5e26fa2447886e851e1c42d8ce08e3c">
     <link rel="stylesheet" href="assets/css/Newsreader.css?h=82294f949779057e24d358a003284d40">
-    <link rel="stylesheet" href="assets/css/Articles-Cards-images.css?h=4f3cfa46e40e236365345fc77963f4b8">
     <link rel="stylesheet" href="assets/css/Logo.css?h=6f5180a23e7329f620549fa0ccb4bfc8">
-    <link rel="stylesheet" href="assets/css/Stats-icons.css?h=befd8a398792e305b7ffd4a176b5b585">
 </head>
 
 <body>
@@ -23,8 +21,6 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="Pedidos.html" style="font-family: 'Libre Franklin', sans-serif;font-weight: bold;font-size: 20px;margin-left: 0px;position: relative;">Pedidos</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="Estados.html" style="margin-bottom: -4px;font-family: 'Libre Franklin', sans-serif;font-size: 20px;font-weight: bold;position: relative;">Estados</a></li>
                 </ul>
             </div>
@@ -37,15 +33,14 @@
                 <div class="col-md-8 col-xl-11 text-center text-md-start mx-auto">
                     <div></div>
                     <div class="text-center">
-                        <h1 style="font-family: Newsreader, serif;font-size: 75.88px;height: 241.164px;margin: -18px;margin-bottom: 1px;"><a href="#"></a>Restaurante</h1>
+                        <div class="col-md-8 col-xl-6 text-center mx-auto">
+                            <h1 style="font-family: Newsreader, serif;font-size: 75.88px;height: 241.164px;margin: -18px;margin-bottom: -120px;"><a href="#"></a>Restaurante</h1>
+                            <h2 class="fw-bold text-center" style="font-family: Newsreader, serif;font-size: 55px;">Crea tu orden</h2>
+                        </div>
                         <div class="vstack">
                             <div class="row">
                                 <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" href="signup.html">Start now!</a></div>
                             </div>
-                        </div>
-                        <div class="btn-toolbar">
-                            <div class="btn-group" role="group"></div>
-                            <div class="btn-group" role="group"></div>
                         </div>
                     </div>
                 </div>
@@ -58,7 +53,7 @@
         <div class="container py-4 py-lg-5" style="background: rgb(255,255,255);">
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2024 Hydro Sync IoT</p>
+                <p class="mb-0">Copyright © 2025 Hydro Sync IoT</p>
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item"></li>
                     <li class="list-inline-item"></li>
@@ -67,8 +62,6 @@
             </div>
         </div>
     </footer><!-- End: Footer Multi Column -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-bright.js?h=78569998362133b84a76614652f3624f"></script>
 </body>
-
 </html>
