Front: Agregado de botones

--- a/front/Estados.html
+++ b/front/Estados.html
@@ -39,7 +39,9 @@
                     <h2 class="fw-bold text-center" style="font-family: Newsreader, serif;font-size: 55px;">Estado de la orden</h2>
                 </div>
             </div>
-            <a class="btn btn-primary" role="button" style="background: var(--bs-info-text-emphasis);border-style: none;border-color: var(--bs-secondary-color);margin-left: 35px;" href="plantRegister.html">+ New Plant</a>
+            <div class="text-center">
+                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" href="signup.html">Orden Entregada</a></div>
+            </div>
         </div><!-- Start: Articles Cards -->
         <div class="container py-4 py-xl-5" style="border-radius: 23px;">
             <div id="dashboardContainer" class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
@@ -50,7 +52,7 @@
         <div class="container py-4 py-lg-5" style="background: rgb(255,255,255);">
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2025 Hydro Sync IoT</p>
+                <p class="mb-0">Copyright © 2025 Restaurante</p>
             </div>
         </div>
     </footer><!-- End: Footer Multi Column -->
