--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -39,8 +39,12 @@
                         </div>
                         <div class="vstack">
                             <div class="row">
-                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" href="signup.html">Start now!</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(149, 86, 5);" href="signup.html">Hamburguesa</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(152, 134, 16);" href="signup.html">Papas</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(216, 138, 42);" href="signup.html">Tacos</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(197, 0, 0);" href="signup.html">Refresco</a></div>
                             </div>
+                            <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" href="signup.html">Enviar orden</a></div>
                         </div>
                     </div>
                 </div>
@@ -50,15 +54,10 @@
     <section style="background: rgb(255,255,255);">
     </section><!-- Start: Footer Multi Column -->
     <footer class="bg-primary-gradient" style="background: rgb(255,255,255);">
-        <div class="container py-4 py-lg-5" style="background: rgb(255,255,255);">
+        <div class="container py-4 py-lg-5" style="background: rgb(255, 255, 255);">
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2025 Hydro Sync IoT</p>
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item"></li>
-                    <li class="list-inline-item"></li>
-                    <li class="list-inline-item"></li>
-                </ul>
+                <p class="mb-0">Copyright © 2025 Restaurante</p>
             </div>
         </div>
     </footer><!-- End: Footer Multi Column -->
