--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -39,12 +39,12 @@
                         </div>
                         <div class="vstack">
                             <div class="row">
-                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(149, 86, 5);" href="signup.html">Hamburguesa</a></div>
-                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(152, 134, 16);" href="signup.html">Papas</a></div>
-                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(216, 138, 42);" href="signup.html">Tacos</a></div>
-                                <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(197, 0, 0);" href="signup.html">Refresco</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(149, 86, 5);" data-item="Hamburguesa">Hamburguesa</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(152, 134, 16);" data-item="Papas">Papas</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(216, 138, 42);" data-item="Tacos">Tacos</a></div>
+                                <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(197, 0, 0);" data-item="Refresco">Refresco</a></div>
                             </div>
-                            <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" href="signup.html">Enviar orden</a></div>
+                            <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" id="send-order">Enviar orden</a></div>
                         </div>
                     </div>
                 </div>
@@ -62,5 +62,45 @@
         </div>
     </footer><!-- End: Footer Multi Column -->
     <script src="assets/js/bold-and-bright.js?h=78569998362133b84a76614652f3624f"></script>
+    <script>
+        const clickList = [];
+
+        // Registrar clics en los botones
+        document.querySelectorAll('.track-click').forEach(button => {
+            button.addEventListener('click', () => {
+                const itemName = button.getAttribute('data-item');
+                clickList.push(itemName);
+                console.log(`Agregado: ${itemName}`);
+            });
+        });
+
+        // Enviar la lista al hacer clic en "Enviar orden"
+        document.getElementById('send-order').addEventListener('click', async () => {
+            console.log('Lista de clics:', clickList);
+            alert(`Orden enviada: ${clickList.join(', ')}`);
+
+            // Enviar datos a la base de datos
+            try {
+                const response = await fetch('https://tu-servidor.com/api/ordenes', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ orden: clickList })
+                });
+
+                if (response.ok) {
+                    console.log('Orden enviada exitosamente a la base de datos.');
+                    alert('Orden registrada en la base de datos.');
+                } else {
+                    console.error('Error al enviar la orden:', response.statusText);
+                    alert('Hubo un error al registrar la orden.');
+                }
+            } catch (error) {
+                console.error('Error de red:', error);
+                alert('No se pudo conectar con el servidor.');
+            }
+        });
+    </script>
 </body>
 </html>
