--- a/front/Estados.html
+++ b/front/Estados.html
@@ -6,39 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Estado pedidos - Restaurante</title>
     <meta name="description" content="Hydro Sync IoT">
+    <!-- Estilos personalizados -->
     <link rel="stylesheet" href="assets/css/Inter.css?h=1653f77a874b8c719b7930c16f024615">
     <link rel="stylesheet" href="assets/css/Libre%20Franklin.css?h=b5e26fa2447886e851e1c42d8ce08e3c">
     <link rel="stylesheet" href="assets/css/Newsreader.css?h=82294f949779057e24d358a003284d40">
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=2ef8dee5f11530c7b88bfc37301e4638">
     <script src="assets/js/dashboard.js"></script>
 </head>
 
 <body>
-    <!-- Start: Navbar Centered Links -->
+    <!-- Navbar principal -->
     <nav class="navbar navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav" style="background: rgb(255,255,255);">
         <div class="container">
+            <!-- Logo del restaurante -->
             <img src="./assets/img/Imagen%20ticket.jpg" alt="Logo" style="width: 66px;">
+            <!-- Botón para colapsar el menú en pantallas pequeñas -->
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
                 <span class="visually-hidden">Toggle navigation</span>
                 <span class="navbar-toggler-icon"></span>
             </button>            
             <div class="collapse navbar-collapse" id="navcol-1">
+                <!-- Enlaces de navegación -->
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="Pedidos.html" style="font-family: 'Libre Franklin', sans-serif;font-weight: bold;font-size: 20px;margin-left: 0px;position: relative;">Pedidos</a></li>
                     <li class="nav-item"><a class="nav-link active" href="Estados.html" style="margin-bottom: -4px;font-family: 'Libre Franklin', sans-serif;font-size: 20px;font-weight: bold;position: relative;">Estados</a></li>
                 </ul>
             </div>
         </div>
-    </nav><!-- End: Navbar Centered Links -->
+    </nav>
 
+    <!-- Sección principal -->
     <section class="py-5" style="background: rgb(255,255,255);">
         <div class="container py-5" style="padding-top: 84px;margin-top: -42px;padding-bottom: 18px;margin-bottom: -46px;">
             <div class="row mb-4 mb-lg-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <!-- Título principal -->
                     <h1 style="font-family: Newsreader, serif;font-size: 75.88px;height: 241.164px;margin: -18px;margin-bottom: -120px;"><a href="#"></a>Restaurante</h1>
                     <h2 class="fw-bold text-center" style="font-family: Newsreader, serif;font-size: 55px;">Estado de la orden</h2>
                 </div>
             </div>
+            <!-- Tabla para mostrar las órdenes -->
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
@@ -57,6 +65,7 @@
             </div>
         </div>
     </section>
+
     <script>
         // Simulación de datos de la base de datos
         const orders = [
@@ -67,32 +76,34 @@
         // Renderizar las órdenes en la tabla
         const ordersTable = document.getElementById('ordersTable');
         orders.forEach(order => {
-            const row = document.createElement('tr');
+            const row = document.createElement('tr'); // Crear una nueva fila
             row.innerHTML = `
-                <td>${order.id}</td>
-                <td>${order.hora}</td>
+                <td>${order.id}</td> <!-- ID de la orden -->
+                <td>${order.hora}</td> <!-- Hora de la orden -->
                 <td>
                     <ul>
+                        <!-- Lista de elementos de la orden -->
                         ${order.orden.map(item => `<li>${item}</li>`).join('')}
                     </ul>
                 </td>
-                <td>${order.estatus}</td>
-                <td><button class="btn btn-success btn-sm" onclick="updateStatus(${order.id})">Orden Entregada</button></td>
+                <td>${order.estatus}</td> <!-- Estatus de la orden -->
+                <td><button class="btn btn-success btn-sm" onclick="updateStatus(${order.id})">Orden Entregada</button></td> <!-- Botón para actualizar el estado -->
             `;
-            ordersTable.appendChild(row);
+            ordersTable.appendChild(row); // Agregar la fila a la tabla
         });
 
         // Función para actualizar el estado de la orden
         function updateStatus(orderId) {
-            const order = orders.find(o => o.id === orderId);
+            const order = orders.find(o => o.id === orderId); // Buscar la orden por ID
             if (order) {
-                order.estatus = "Entregada";
+                order.estatus = "Entregada"; // Actualizar el estatus
                 alert(`El estado de la orden ${orderId} ha sido actualizado a "Entregada".`);
                 location.reload(); // Recargar la página para reflejar los cambios
             }
         }
     </script>
 
+    <!-- Footer -->
     <footer class="bg-primary-gradient" style="background: rgb(255,255,255);">
         <div class="container py-4 py-lg-5" style="background: rgb(255,255,255);">
             <hr>
@@ -100,8 +111,8 @@
                 <p class="mb-0">Copyright © 2025 Restaurante</p>
             </div>
         </div>
-    </footer><!-- End: Footer Multi Column -->
+    </footer>
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
