--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Pedidos Restaurante</title>
     <meta name="description" content="Hydro Sync IoT">
+    <!-- Estilos personalizados -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=2ef8dee5f11530c7b88bfc37301e4638">
     <link rel="stylesheet" href="assets/css/Inter.css?h=1653f77a874b8c719b7930c16f024615">
     <link rel="stylesheet" href="assets/css/Libre%20Franklin.css?h=b5e26fa2447886e851e1c42d8ce08e3c">
@@ -14,29 +15,39 @@
 </head>
 
 <body>
-    <!-- Start: Navbar Centered Links -->
+    <!-- Navbar principal -->
     <nav class="navbar navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav" style="background: rgb(255,255,255);">
-        <div class="container"><img src="./assets/img/Imagen%20ticket.jpg" alt="Logo" style="width: 66px;">
-            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container">
+            <!-- Logo del restaurante -->
+            <img src="./assets/img/Imagen%20ticket.jpg" alt="Logo" style="width: 66px;">
+            <!-- Botón para colapsar el menú en pantallas pequeñas -->
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1">
+                <!-- Enlaces de navegación -->
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="Pedidos.html" style="font-family: 'Libre Franklin', sans-serif;font-weight: bold;font-size: 20px;margin-left: 0px;position: relative;">Pedidos</a></li>
                     <li class="nav-item"><a class="nav-link" href="Estados.html" style="margin-bottom: -4px;font-family: 'Libre Franklin', sans-serif;font-size: 20px;font-weight: bold;position: relative;">Estados</a></li>
                 </ul>
             </div>
         </div>
-    </nav><!-- End: Navbar Centered Links -->
+    </nav>
+
+    <!-- Sección principal -->
     <header class="bg-primary-gradient" style="background: rgb(255,255,255);">
-        <!-- Start: Hero Clean Reverse -->
         <div class="container pt-4 pt-xl-5" style="width: 1171px;">
             <div class="row pt-5" style="background: rgb(255,255,255);">
                 <div class="col-md-8 col-xl-11 text-center text-md-start mx-auto">
                     <div></div>
                     <div class="text-center">
                         <div class="col-md-8 col-xl-6 text-center mx-auto">
+                            <!-- Título principal -->
                             <h1 style="font-family: Newsreader, serif;font-size: 75.88px;height: 241.164px;margin: -18px;margin-bottom: -120px;"><a href="#"></a>Restaurante</h1>
                             <h2 class="fw-bold text-center" style="font-family: Newsreader, serif;font-size: 55px;">Crea tu orden</h2>
                         </div>
+                        <!-- Botones para seleccionar elementos del menú -->
                         <div class="vstack">
                             <div class="row">
                                 <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(149, 86, 5);" data-item="Hamburguesa">Hamburguesa</a></div>
@@ -44,15 +55,20 @@
                                 <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(216, 138, 42);" data-item="Tacos">Tacos</a></div>
                                 <div class="col"><a class="btn btn-primary btn-lg track-click" role="button" style="margin-top: 51px;background: rgb(197, 0, 0);" data-item="Refresco">Refresco</a></div>
                             </div>
+                            <!-- Botón para enviar la orden -->
                             <div class="col"><a class="btn btn-primary btn-lg" role="button" style="margin-top: 51px;background: rgb(41,118,47);" id="send-order">Enviar orden</a></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div><!-- End: Hero Clean Reverse -->
+        </div>
     </header>
+
+    <!-- Sección vacía para contenido adicional -->
     <section style="background: rgb(255,255,255);">
-    </section><!-- Start: Footer Multi Column -->
+    </section>
+
+    <!-- Footer -->
     <footer class="bg-primary-gradient" style="background: rgb(255,255,255);">
         <div class="container py-4 py-lg-5" style="background: rgb(255, 255, 255);">
             <hr>
@@ -60,33 +76,34 @@
                 <p class="mb-0">Copyright © 2025 Restaurante</p>
             </div>
         </div>
-    </footer><!-- End: Footer Multi Column -->
-    <script src="assets/js/bold-and-bright.js?h=78569998362133b84a76614652f3624f"></script>
-    <script>
-        const clickList = [];
+    </footer>
 
-        // Registrar clics en los botones
+    <!-- Script para manejar la lógica de los pedidos -->
+    <script>
+        const clickList = []; // Lista para almacenar los elementos seleccionados
+
+        // Registrar clics en los botones de los elementos del menú
         document.querySelectorAll('.track-click').forEach(button => {
             button.addEventListener('click', () => {
-                const itemName = button.getAttribute('data-item');
-                clickList.push(itemName);
+                const itemName = button.getAttribute('data-item'); // Obtener el nombre del elemento
+                clickList.push(itemName); // Agregar el elemento a la lista
                 console.log(`Agregado: ${itemName}`);
             });
         });
 
-        // Enviar la lista al hacer clic en "Enviar orden"
+        // Enviar la lista de elementos seleccionados al hacer clic en "Enviar orden"
         document.getElementById('send-order').addEventListener('click', async () => {
             console.log('Lista de clics:', clickList);
-            alert(`Orden enviada: ${clickList.join(', ')}`);
+            alert(`Orden enviada: ${clickList.join(', ')}`); // Mostrar los elementos seleccionados
 
-            // Enviar datos a la base de datos
+            // Enviar los datos al servidor
             try {
                 const response = await fetch('https://tu-servidor.com/api/ordenes', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ orden: clickList })
+                    body: JSON.stringify({ orden: clickList }) // Enviar la lista como JSON
                 });
 
                 if (response.ok) {
