--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -94,16 +94,20 @@
         // Enviar la lista de elementos seleccionados al hacer clic en "Enviar orden"
         document.getElementById('send-order').addEventListener('click', async () => {
             console.log('Lista de clics:', clickList);
-            alert(`Orden enviada: ${clickList.join(', ')}`); // Mostrar los elementos seleccionados
+            alert(`Orden enviada: ${clickList}`); // Mostrar los elementos seleccionados
+
+            const hora_comanda = new Date().toLocaleString('en-US', {timeZone: 'America/Mexico_City'}).toString(); // Obtener la hora actual
+            console.log(hora_comanda);
+
 
             // Enviar los datos al servidor
             try {
-                const response = await fetch('https://tu-servidor.com/api/ordenes', {
+                const response = await fetch('http://restaurant-env.eba-ath8xwp7.us-east-1.elasticbeanstalk.com/smartKitchen/POS/order', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ orden: clickList }) // Enviar la lista como JSON
+                    body: JSON.stringify({ alimento: clickList.join(', '), estado: 'activa', hora: hora_comanda}) // Enviar la lista como JSON
                 });
 
                 if (response.ok) {
