Estado de comanda

--- a/front/Estados.html
+++ b/front/Estados.html
@@ -98,7 +98,7 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify({
-                        estado: "Entregada"
+                        estado: "Cerrada"
                     })
                 });
 
