--- a/front/Pedidos.html
+++ b/front/Pedidos.html
@@ -105,7 +105,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ alimento: clickList.join(', '), estado: 'activa', hora: hora_comanda})
+                    body: JSON.stringify({ alimento: clickList.join(', '), estado: 'Activa', hora: hora_comanda})
                 });
 
                 if (response.ok) {
